GiRaFFE_NRPy_Main_Driver: Added comments to the main function.

--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
@@ -63,7 +63,8 @@
     "    1. [Step 2.d](#velocity_bc): Apply outflow boundary conditions to $\\bar{v}^i$\n",
     "        * **GiRaFFE_NRPy/GiRaFFE_NRPy_BCs.py**\n",
     "1. [Step 3](#write_out): Write out the C code function\n",
-    "1. [Step 4](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file\n"
+    "1. [Step 3](#code_validation): Self-Validation against `GiRaFFE_NRPy_Main_Drive.py`\n",
+    "1. [Step 5](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file\n"
    ]
   },
   {
@@ -781,11 +782,13 @@
     "  REAL *gf;\n",
     "  int gz_lo[4],gz_hi[4];\n",
     "} gf_and_gz_struct;\n",
+    "// Some additional constants needed for PPM:\n",
     "const int VX=0,VY=1,VZ=2,BX=3,BY=4,BZ=5;\n",
     "const int NUM_RECONSTRUCT_GFS = 6;\n",
     "\n",
+    "// Include ALL functions needed for evolution\n",
     "#include \"RHSs/calculate_parentheticals_for_RHSs.h\"\n",
-    "#include \"RHSs/calculate_AD_gauge_psi6Phi_RHSs\"\n",
+    "#include \"RHSs/calculate_AD_gauge_psi6Phi_RHSs.h\"\n",
     "#include \"PPM/reconstruct_set_of_prims_PPM_GRFFE_NRPy.c\"\n",
     "#include \"FCVAL/interpolate_metric_gfs_to_cell_faces.h\"\n",
     "#include \"RHSs/calculate_StildeD0_source_term.h\"\n",
@@ -808,16 +811,21 @@
     "#include \"C2P/GiRaFFE_NRPy_cons_to_prims.h\"\n",
     "#include \"C2P/GiRaFFE_NRPy_prims_to_cons.h\"\n",
     "\n",
-    "void GiRaFFE_NRPy_RHSs(const paramstruct *restrict params,const REAL *restrict auxevol_gfs,const REAL *restrict in_gfs,REAL *restrict rhs_gfs) {\n",
+    "void GiRaFFE_NRPy_RHSs(const paramstruct *restrict params,REAL *restrict auxevol_gfs,const REAL *restrict in_gfs,REAL *restrict rhs_gfs) {\n",
     "#include \"set_Cparameters.h\"\n",
+    "    // First things first: we calculate the easier source terms that don't require flux directions\n",
+    "    // This will also reset the RHSs for each gf at each new timestep.\n",
     "    calculate_parentheticals_for_RHSs(params,in_gfs,auxevol_gfs);\n",
     "    calculate_AD_gauge_psi6Phi_RHSs(params,in_gfs,auxevol_gfs,rhs_gfs);\n",
     "    \n",
+    "    // Now, we set up a bunch of structs of pointers to properly guide the PPM algorithm.\n",
+    "    // They also count the number of ghostzones available.\n",
     "    gf_and_gz_struct in_prims[NUM_RECONSTRUCT_GFS], out_prims_r[NUM_RECONSTRUCT_GFS], out_prims_l[NUM_RECONSTRUCT_GFS];\n",
     "    int which_prims_to_reconstruct[NUM_RECONSTRUCT_GFS],num_prims_to_reconstruct;\n",
     "    const int Nxxp2NG012 = Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2;\n",
     "    REAL temporary[Nxxp2NG012];\n",
     "\n",
+    "    // This sets pointers to the portion of auxevol_gfs containing the relevant gridfunction.\n",
     "    int ww=0;\n",
     "    in_prims[ww].gf      = auxevol_gfs + Nxxp2NG012*VALENCIAVU0GF; \n",
     "      out_prims_r[ww].gf = auxevol_gfs + Nxxp2NG012*VALENCIAV_RU0GF; \n",
@@ -862,14 +870,25 @@
     "    // In each direction, perform the PPM reconstruction procedure.\n",
     "    // Then, add the fluxes to the RHS as appropriate.\n",
     "    for(int flux_dirn=0;flux_dirn<3;flux_dirn++) {\n",
-    "        // This function is housed in the file: \"reconstruct_set_of_prims_PPM_GRFFE_NRPy.c\"\n",
+    "        // In each direction, interpolate the metric gfs (gamma,beta,alpha) to cell faces.\n",
     "        interpolate_metric_gfs_to_cell_faces(params,auxevol_gfs,flux_dirn);\n",
+    "        // Then, reconstruct the primitive variables on the cell faces.\n",
+    "        // This function is housed in the file: \"reconstruct_set_of_prims_PPM_GRFFE_NRPy.c\"\n",
     "        reconstruct_set_of_prims_PPM_GRFFE_NRPy(params, auxevol_gfs, flux_dirn+1, num_prims_to_reconstruct,                                                          \n",
     "                                                which_prims_to_reconstruct, in_prims, out_prims_r, out_prims_l, temporary);\n",
+    "        // For example, if flux_dirn==0, then at gamma_faceDD00(i,j,k) represents gamma_{xx}\n",
+    "        // at (i-1/2,j,k), Valenciav_lU0(i,j,k) is the x-component of the velocity at (i-1/2-epsilon,j,k),\n",
+    "        // and Valenciav_rU0(i,j,k) is the x-component of the velocity at (i-1/2+epsilon,j,k).\n",
+    "        \n",
     "        if(flux_dirn==0) {\n",
+    "            // Next, we calculate the source term for StildeD. Again, this also resets the rhs_gfs array at\n",
+    "            // each new timestep.\n",
     "            calculate_StildeD0_source_term(params,auxevol_gfs,rhs_gfs);\n",
+    "            // Now, compute the electric field on each face of a cell and add it to the RHSs as appropriate\n",
     "            calculate_E_field_D0_right(params,auxevol_gfs,rhs_gfs);\n",
     "            calculate_E_field_D0_left(params,auxevol_gfs,rhs_gfs);\n",
+    "            // Finally, we calculate the flux of StildeD and add the appropriate finite-differences \n",
+    "            // to the RHSs.\n",
     "            calculate_Stilde_flux_D0_right(params,auxevol_gfs,rhs_gfs);\n",
     "            calculate_Stilde_flux_D0_left(params,auxevol_gfs,rhs_gfs);\n",
     "        }\n",
@@ -891,12 +910,119 @@
     "}\n",
     "\n",
     "void GiRaFFE_NRPy_post_step(const paramstruct *restrict params,REAL *xx[3],REAL *restrict auxevol_gfs,REAL *restrict rhs_gfs) {\n",
+    "    // First, apply BCs to AD and psi6Phi. Then calculate BU from AD\n",
     "    apply_bcs_potential(params,rhs_gfs);\n",
     "    driver_A_to_B(params,rhs_gfs,auxevol_gfs);\n",
+    "    // Apply fixes to StildeD, then recompute the velocity at the new timestep. \n",
+    "    // Apply the current sheet prescription to the velocities\n",
     "    GiRaFFE_NRPy_cons_to_prims(params,xx,auxevol_gfs,rhs_gfs);\n",
+    "    // Then, recompute StildeD to be consistent with the new velocities\n",
     "    GiRaFFE_NRPy_prims_to_cons(params,auxevol_gfs,rhs_gfs);\n",
+    "    // Finally, apply outflow boundary conditions to the velocities.\n",
     "    apply_bcs_velocity(params,auxevol_gfs);\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='code_validation'></a>\n",
+    "\n",
+    "# Step 4: Self-Validation against `GiRaFFE_NRPy_Main_Drive.py` \\[Back to [top](#toc)\\]\n",
+    "$$\\label{code_validation}$$\n",
+    "\n",
+    "To validate the code in this tutorial we check for agreement between the files\n",
+    "\n",
+    "1. that were generated in this tutorial and\n",
+    "1. those that are generated in the module `GiRaFFE_NRPy_Main_Drive.py`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output C function calculate_parentheticals_for_RHSs() to file GiRaFFE_validation_Ccodes/RHSs/calculate_parentheticals_for_RHSs.h\n",
+      "Output C function calculate_AD_gauge_psi6Phi_RHSs() to file GiRaFFE_validation_Ccodes/RHSs/calculate_AD_gauge_psi6Phi_RHSs.h\n"
+     ]
+    }
+   ],
+   "source": [
+    "gri.glb_gridfcs_list = []\n",
+    "# Define the directory that we wish to validate against:\n",
+    "valdir = os.path.join(\"GiRaFFE_validation_Ccodes\")\n",
+    "cmd.mkdir(valdir)\n",
+    "\n",
+    "import GiRaFFE_NRPy.GiRaFFE_NRPy_Main_Driver as md\n",
+    "md.GiRaFFE_NRPy_Main_Driver_generate_all(valdir)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With both sets of codes generated, we can now compare them against each other."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import difflib\n",
+    "import sys\n",
+    "\n",
+    "print(\"Printing difference between original C code and this code...\")\n",
+    "# Open the files to compare\n",
+    "files = [\"GiRaFFE_NRPy_Main_Driver.h\",\\\n",
+    "         \"RHSs/calculate_parentheticals_for_RHSs.h\",\\\n",
+    "         \"RHSs/calculate_AD_gauge_psi6Phi_RHSs.h\",\\\n",
+    "         \"PPM/reconstruct_set_of_prims_PPM_GRFFE_NRPy.c\",\\\n",
+    "         \"PPM/loop_defines_reconstruction_NRPy.h\",\\\n",
+    "         \"FCVAL/interpolate_metric_gfs_to_cell_faces.h\",\\\n",
+    "         \"RHSs/calculate_StildeD0_source_term.h\",\\\n",
+    "         \"RHSs/calculate_StildeD1_source_term.h\",\\\n",
+    "         \"RHSs/calculate_StildeD2_source_term.h\",\\\n",
+    "         \"RHSs/calculate_E_field_D0_right.h\",\\\n",
+    "         \"RHSs/calculate_E_field_D0_left.h\",\\\n",
+    "         \"RHSs/calculate_E_field_D1_right.h\",\\\n",
+    "         \"RHSs/calculate_E_field_D1_left.h\",\\\n",
+    "         \"RHSs/calculate_E_field_D2_right.h\",\\\n",
+    "         \"RHSs/calculate_E_field_D2_left.h\",\\\n",
+    "         \"RHSs/calculate_Stilde_flux_D0_right.h\",\\\n",
+    "         \"RHSs/calculate_Stilde_flux_D0_left.h\",\\\n",
+    "         \"RHSs/calculate_Stilde_flux_D1_right.h\",\\\n",
+    "         \"RHSs/calculate_Stilde_flux_D1_left.h\",\\\n",
+    "         \"RHSs/calculate_Stilde_flux_D2_right.h\",\\\n",
+    "         \"RHSs/calculate_Stilde_flux_D2_left.h\",\\\n",
+    "         \"boundary_conditions/GiRaFFE_boundary_conditions.h\",\\\n",
+    "         \"A2B/driver_AtoB.h\",\\\n",
+    "         \"C2P/GiRaFFE_NRPy_cons_to_prims.h\",\\\n",
+    "         \"C2P/GiRaFFE_NRPy_prims_to_cons.h\"]\n",
+    "\n",
+    "for file in files:\n",
+    "    print(\"Checking file \" + file)\n",
+    "    with open(os.path.join(valdir,file)) as file1, open(os.path.join(out_dir,file)) as file2:\n",
+    "        # Read the lines of each file\n",
+    "        file1_lines = file1.readlines()\n",
+    "        file2_lines = file2.readlines()\n",
+    "        num_diffs = 0\n",
+    "        for line in difflib.unified_diff(file1_lines, file2_lines, fromfile=os.path.join(valdir,file), tofile=os.path.join(out_dir,file)):\n",
+    "            sys.stdout.writelines(line)\n",
+    "            num_diffs = num_diffs + 1\n",
+    "        if num_diffs == 0:\n",
+    "            print(\"No difference. TEST PASSED!\")\n",
+    "        else:\n",
+    "            print(\"ERROR: Disagreement found with .py file. See differences above.\")"
    ]
   },
   {
@@ -914,25 +1040,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb\n",
     "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy_Main_Driver.tex\n",
