GiRaFFE_NRPy_Main_Driver: Actually added comments to the main function.

--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,24 @@
      "output_type": "stream",
      "text": [
       "Output C function calculate_parentheticals_for_RHSs() to file GiRaFFE_validation_Ccodes/RHSs/calculate_parentheticals_for_RHSs.h\n",
-      "Output C function calculate_AD_gauge_psi6Phi_RHSs() to file GiRaFFE_validation_Ccodes/RHSs/calculate_AD_gauge_psi6Phi_RHSs.h\n"
+      "Output C function calculate_AD_gauge_psi6Phi_RHSs() to file GiRaFFE_validation_Ccodes/RHSs/calculate_AD_gauge_psi6Phi_RHSs.h\n",
+      "Output C function calculate_StildeD0_source_term() to file GiRaFFE_validation_Ccodes/RHSs/calculate_StildeD0_source_term.h\n",
+      "Output C function calculate_StildeD1_source_term() to file GiRaFFE_validation_Ccodes/RHSs/calculate_StildeD1_source_term.h\n",
+      "Output C function calculate_StildeD2_source_term() to file GiRaFFE_validation_Ccodes/RHSs/calculate_StildeD2_source_term.h\n",
+      "Output C function calculate_E_field_D0_right() to file GiRaFFE_validation_Ccodes/RHSs/calculate_E_field_D0_right.h\n",
+      "Output C function calculate_E_field_D0_left() to file GiRaFFE_validation_Ccodes/RHSs/calculate_E_field_D0_left.h\n",
+      "Output C function calculate_E_field_D1_right() to file GiRaFFE_validation_Ccodes/RHSs/calculate_E_field_D1_right.h\n",
+      "Output C function calculate_E_field_D1_left() to file GiRaFFE_validation_Ccodes/RHSs/calculate_E_field_D1_left.h\n",
+      "Output C function calculate_E_field_D2_right() to file GiRaFFE_validation_Ccodes/RHSs/calculate_E_field_D2_right.h\n",
+      "Output C function calculate_E_field_D2_left() to file GiRaFFE_validation_Ccodes/RHSs/calculate_E_field_D2_left.h\n",
+      "Output C function calculate_Stilde_flux_D0_right() to file GiRaFFE_validation_Ccodes/RHSs/calculate_Stilde_flux_D0_right.h\n",
+      "Output C function calculate_Stilde_flux_D0_left() to file GiRaFFE_validation_Ccodes/RHSs/calculate_Stilde_flux_D0_left.h\n",
+      "Output C function calculate_Stilde_flux_D1_right() to file GiRaFFE_validation_Ccodes/RHSs/calculate_Stilde_flux_D1_right.h\n",
+      "Output C function calculate_Stilde_flux_D1_left() to file GiRaFFE_validation_Ccodes/RHSs/calculate_Stilde_flux_D1_left.h\n",
+      "Output C function calculate_Stilde_flux_D2_right() to file GiRaFFE_validation_Ccodes/RHSs/calculate_Stilde_flux_D2_right.h\n",
+      "Output C function calculate_Stilde_flux_D2_left() to file GiRaFFE_validation_Ccodes/RHSs/calculate_Stilde_flux_D2_left.h\n",
+      "Output C function GiRaFFE_NRPy_cons_to_prims() to file GiRaFFE_validation_Ccodes/C2P/GiRaFFE_NRPy_cons_to_prims.h\n",
+      "Output C function GiRaFFE_NRPy_prims_to_cons() to file GiRaFFE_validation_Ccodes/C2P/GiRaFFE_NRPy_prims_to_cons.h\n"
      ]
     }
    ],
@@ -972,11 +989,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing difference between original C code and this code...\n",
+      "Checking file GiRaFFE_NRPy_Main_Driver.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file RHSs/calculate_parentheticals_for_RHSs.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file RHSs/calculate_AD_gauge_psi6Phi_RHSs.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file PPM/reconstruct_set_of_prims_PPM_GRFFE_NRPy.c\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file PPM/loop_defines_reconstruction_NRPy.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file FCVAL/interpolate_metric_gfs_to_cell_faces.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file RHSs/calculate_StildeD0_source_term.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file RHSs/calculate_StildeD1_source_term.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file RHSs/calculate_StildeD2_source_term.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file RHSs/calculate_E_field_D0_right.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file RHSs/calculate_E_field_D0_left.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file RHSs/calculate_E_field_D1_right.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file RHSs/calculate_E_field_D1_left.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file RHSs/calculate_E_field_D2_right.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file RHSs/calculate_E_field_D2_left.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file RHSs/calculate_Stilde_flux_D0_right.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file RHSs/calculate_Stilde_flux_D0_left.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file RHSs/calculate_Stilde_flux_D1_right.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file RHSs/calculate_Stilde_flux_D1_left.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file RHSs/calculate_Stilde_flux_D2_right.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file RHSs/calculate_Stilde_flux_D2_left.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file boundary_conditions/GiRaFFE_boundary_conditions.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file A2B/driver_AtoB.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file C2P/GiRaFFE_NRPy_cons_to_prims.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file C2P/GiRaFFE_NRPy_prims_to_cons.h\n",
+      "No difference. TEST PASSED!\n"
+     ]
+    }
+   ],
    "source": [
     "import difflib\n",
     "import sys\n",
@@ -1040,9 +1115,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
    "source": [
     "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb\n",
     "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy_Main_Driver.tex\n",
