--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb
@@ -181,7 +181,15 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(xx0/sqrt(1 - mu_AW**2) - 3/200)*(-TINYDOUBLE/2 + xx0/2 + sqrt(1 - mu_AW**2)/20 - nrpyAbs(-TINYDOUBLE + xx0 + sqrt(1 - mu_AW**2)/10)/2)/(-TINYDOUBLE + xx0 + sqrt(1 - mu_AW**2)/10) + (23*xx0/(20*sqrt(1 - mu_AW**2)) - 3*cos(5*M_PI*xx0/sqrt(1 - mu_AW**2))/(100*M_PI))*(xx0/2 + sqrt(1 - mu_AW**2)/20 + nrpyAbs(xx0 + sqrt(1 - mu_AW**2)/10)/2)*(-TINYDOUBLE/2 + xx0/2 - sqrt(1 - mu_AW**2)/20 - nrpyAbs(-TINYDOUBLE + xx0 - sqrt(1 - mu_AW**2)/10)/2)/((-TINYDOUBLE + xx0 - sqrt(1 - mu_AW**2)/10)*(TINYDOUBLE + xx0 + sqrt(1 - mu_AW**2)/10)) + (13*xx0/(10*sqrt(1 - mu_AW**2)) - 3/200)*(xx0/2 - sqrt(1 - mu_AW**2)/20 + nrpyAbs(xx0 - sqrt(1 - mu_AW**2)/10)/2)/(TINYDOUBLE + xx0 - sqrt(1 - mu_AW**2)/10)\n"
+     ]
+    }
+   ],
    "source": [
     "AD = ixp.zerorank1(DIM=3)\n",
     "\n",
@@ -196,6 +204,7 @@
     "AD[1] = noif.coord_leq_bound(x,-bound)*Ayleft\\\n",
     "       +noif.coord_greater_bound(x,-bound)*noif.coord_leq_bound(x,bound)*Aycenter\\\n",
     "       +noif.coord_greater_bound(x,bound)*Ayright\n",
+    "print(AD[1])\n",
     "AD[2] = y-gammamu*(sp.sympify(1)-mu_AW)*x"
    ]
   },
@@ -220,13 +229,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sin(5.0*M_PI*xx0/sqrt(1 - mu_AW**2)) + 1.0\n"
+      "sin(5*M_PI*xx0/sqrt(1 - mu_AW**2)) + 1\n"
      ]
     }
    ],
    "source": [
     "xprime = gammamu*x\n",
-    "f_AW = 1.0 + sp.sin(5.0*M_PI*xprime)\n",
+    "f_AW = 1 + sp.sin(5*M_PI*xprime)\n",
     "print(f_AW)"
    ]
   },
@@ -247,7 +256,15 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3*sin(5*M_PI*xx0/sqrt(1 - mu_AW**2))/20 + 23/20)*(xx0/2 + sqrt(1 - mu_AW**2)/20 + nrpyAbs(xx0 + sqrt(1 - mu_AW**2)/10)/2)*(-TINYDOUBLE/2 + xx0/2 - sqrt(1 - mu_AW**2)/20 - nrpyAbs(-TINYDOUBLE + xx0 - sqrt(1 - mu_AW**2)/10)/2)/((-TINYDOUBLE + xx0 - sqrt(1 - mu_AW**2)/10)*(TINYDOUBLE + xx0 + sqrt(1 - mu_AW**2)/10)) + 13*(xx0/2 - sqrt(1 - mu_AW**2)/20 + nrpyAbs(xx0 - sqrt(1 - mu_AW**2)/10)/2)/(10*(TINYDOUBLE + xx0 - sqrt(1 - mu_AW**2)/10)) + (-TINYDOUBLE/2 + xx0/2 + sqrt(1 - mu_AW**2)/20 - nrpyAbs(-TINYDOUBLE + xx0 + sqrt(1 - mu_AW**2)/10)/2)/(-TINYDOUBLE + xx0 + sqrt(1 - mu_AW**2)/10)\n"
+     ]
+    }
+   ],
    "source": [
     "Bzleft = sp.sympify(1)\n",
     "Bzcenter = sp.sympify(1) + sp.Rational(15,100)*f_AW\n",
@@ -258,7 +275,8 @@
     "BpU[1] = sp.sympify(1)\n",
     "BpU[2] = noif.coord_leq_bound(x,-bound)*Bzleft\\\n",
     "        +noif.coord_greater_bound(x,-bound)*noif.coord_leq_bound(x,bound)*Bzcenter\\\n",
-    "        +noif.coord_greater_bound(x,bound)*Bzright\n"
+    "        +noif.coord_greater_bound(x,bound)*Bzright\n",
+    "print(BpU[2])"
    ]
   },
   {
