--- a/in_progress/Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb
@@ -145,16 +145,18 @@
     "    # Outputs: cplus,cminus \n",
     "    \n",
     "    # a = 1/(alpha^2)\n",
-    "    a = 1/(lapse*lapse)\n",
+    "    a = sp.sympify(1)/(lapse*lapse)\n",
     "    # b = 2 beta^i / alpha^2\n",
-    "    b = 2 * shifti /(lapse*lapse)\n",
+    "    b = sp.sympify(2) * shifti /(lapse*lapse)\n",
     "    # c = -g^{ii} + (beta^i)^2 / alpha^2\n",
     "    c = - gupii + shifti*shifti/(lapse*lapse)\n",
     "    \n",
     "    # Now, we are free to solve the quadratic equation as usual. We take care to avoid passing a\n",
     "    # negative value to the sqrt function.\n",
-    "    detm = b*b - 4*a*c\n",
-    "    detm = sp.sqrt(sp.Rational(1,2)*(detm + nrpyAbs(detm)))\n",
+    "    detm = b*b - sp.sympify(4)*a*c\n",
+    "\n",
+    "    import Min_Max_and_Piecewise_Expressions as noif\n",
+    "    detm = sp.sqrt(noif.max_noif(sp.sympify(0),detm))\n",
     "    global cplus,cminus\n",
     "    cplus  = sp.Rational(1,2)*(-b/a + detm/a)\n",
     "    cminus = sp.Rational(1,2)*(-b/a - detm/a)\n"
@@ -191,12 +193,12 @@
     "    \n",
     "    global cmax,cmin\n",
     "    # Now, we need to set cmax to the larger of cpr,cpl, and 0\n",
-    "    cmax = sp.Rational(1,2)*(cpr+cpl+nrpyAbs(cpr-cpl))\n",
-    "    cmax = sp.Rational(1,2)*(cmax+nrpyAbs(cmax))\n",
+    "    \n",
+    "    import Min_Max_and_Piecewise_Expressions as noif\n",
+    "    cmax = noif.max_noif(noif.max_noif(cpr,cpl),sp.sympify(0))\n",
     "    \n",
     "    # And then, set cmin to the smaller of cmr,cml, and 0\n",
-    "    cmin =  sp.Rational(1,2)*(cmr+cml-nrpyAbs(cmr-cml))\n",
-    "    cmin = -sp.Rational(1,2)*(cmin-nrpyAbs(cmin))\n"
+    "    cmin = -noif.min_noif(noif.min_noif(cmr,cml),sp.sympify(0))\n"
    ]
   },
   {
