--- a/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
@@ -220,15 +220,15 @@
     "    # Outputs: cplus,cminus \n",
     "    \n",
     "    # a = 1/(alpha^2)\n",
-    "    a = 1/(lapse*lapse)\n",
+    "    a = sp.sympify(1)/(lapse*lapse)\n",
     "    # b = 2 beta^i / alpha^2\n",
-    "    b = 2 * shifti /(lapse*lapse)\n",
+    "    b = sp.sympify(2) * shifti /(lapse*lapse)\n",
     "    # c = -g^{ii} + (beta^i)^2 / alpha^2\n",
     "    c = - gupii + shifti*shifti/(lapse*lapse)\n",
     "    \n",
     "    # Now, we are free to solve the quadratic equation as usual. We take care to avoid passing a\n",
     "    # negative value to the sqrt function.\n",
-    "    detm = b*b - 4*a*c\n",
+    "    detm = b*b - sp.sympify(4)*a*c\n",
     "    \n",
     "    import Min_Max_and_Piecewise_Expressions as noif\n",
     "    detm = sp.sqrt(noif.max_noif(sp.sympify(0),detm))\n",
