--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb
@@ -98,6 +98,8 @@
     "\n",
     "out_dir = \"Validation/\"\n",
     "cmd.mkdir(out_dir)\n",
+    "subdir = \"source_terms\"\n",
+    "cmd.mkdir(os.path.join(out_dir,subdir))\n",
     "\n",
     "thismodule = \"Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms\"\n",
     "\n",
@@ -507,9 +509,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_StildeD0_source_term() to file Validation/calculate_StildeD0_source_term.h\n",
-      "Output C function calculate_StildeD1_source_term() to file Validation/calculate_StildeD1_source_term.h\n",
-      "Output C function calculate_StildeD2_source_term() to file Validation/calculate_StildeD2_source_term.h\n"
+      "Output C function calculate_StildeD0_source_term() to file Validation/source_terms/calculate_StildeD0_source_term.h\n",
+      "Output C function calculate_StildeD1_source_term() to file Validation/source_terms/calculate_StildeD1_source_term.h\n",
+      "Output C function calculate_StildeD2_source_term() to file Validation/source_terms/calculate_StildeD2_source_term.h\n"
      ]
     }
    ],
@@ -602,13 +604,14 @@
     "    desc = \"Adds the source term to StildeD\"+str(i)+\".\"\n",
     "    name = \"calculate_StildeD\"+str(i)+\"_source_term\"\n",
     "    outCfunction(\n",
-    "        outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
+    "        outfile  = os.path.join(out_dir,subdir,name+\".h\"), desc=desc, name=name,\n",
     "        params   =\"const paramstruct *params,REAL *xx[3],const REAL *auxevol_gfs, REAL *rhs_gfs\",\n",
     "        body     = general_access \\\n",
     "                  +metric_deriv_access[i]\\\n",
     "                  +outputC(GRHD.S_tilde_source_termD[i],\"Stilde_rhsD\"+str(i),\"returnstring\",params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\")\\\n",
     "                  +write_final_quantity[i],\n",
-    "        loopopts =\"InteriorPoints\")\n"
+    "        loopopts =\"InteriorPoints\",\n",
+    "        rel_path_for_Cparams=os.path.join(\"../\"))\n"
    ]
   },
   {
@@ -627,7 +630,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_parentheticals_for_RHSs() to file Validation/calculate_parentheticals_for_RHSs.h\n"
+      "Output C function calculate_parentheticals_for_RHSs() to file Validation/source_terms/calculate_parentheticals_for_RHSs.h\n"
      ]
     }
    ],
@@ -650,10 +653,11 @@
     "desc = \"Calculate quantities to be finite-differenced for the GRFFE RHSs\"\n",
     "name = \"calculate_parentheticals_for_RHSs\"\n",
     "outCfunction(\n",
-    "    outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
+    "    outfile  = os.path.join(out_dir,subdir,name+\".h\"), desc=desc, name=name,\n",
     "    params   =\"const paramstruct *params,REAL *xx[3],const REAL *in_gfs,REAL *auxevol_gfs\",\n",
     "    body     = fin.FD_outputC(\"returnstring\",parens_to_print,params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\"),\n",
-    "    loopopts =\"AllPoints\")\n"
+    "    loopopts =\"AllPoints\",\n",
+    "    rel_path_for_Cparams=os.path.join(\"../\"))\n"
    ]
   },
   {
@@ -672,7 +676,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_AD_gauge_psi6Phi_RHSs() to file Validation/calculate_AD_gauge_psi6Phi_RHSs.h\n"
+      "Output C function calculate_AD_gauge_psi6Phi_RHSs() to file Validation/source_terms/calculate_AD_gauge_psi6Phi_RHSs.h\n"
      ]
     }
    ],
@@ -699,10 +703,11 @@
     "desc = \"Calculate AD gauge term and psi6Phi RHSs\"\n",
     "name = \"calculate_AD_gauge_psi6Phi_RHSs\"\n",
     "outCfunction(\n",
-    "    outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
+    "    outfile  = os.path.join(out_dir,subdir,name+\".h\"), desc=desc, name=name,\n",
     "    params   =\"const paramstruct *params,REAL *xx[3],const REAL *in_gfs,const REAL *auxevol_gfs,REAL *rhs_gfs\",\n",
     "    body     = fin.FD_outputC(\"returnstring\",RHSs_to_print,params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\"),\n",
-    "    loopopts =\"InteriorPoints\")\n"
+    "    loopopts =\"InteriorPoints\",\n",
+    "    rel_path_for_Cparams=os.path.join(\"../\"))\n"
    ]
   },
   {
@@ -768,7 +773,7 @@
    "outputs": [],
    "source": [
     "import GiRaFFE_NRPy.GiRaFFE_NRPy_Metric_Face_Values as FCVAL\n",
-    "FCVAL.GiRaFFE_NRPy_FCVAL(out_dir)"
+    "FCVAL.GiRaFFE_NRPy_FCVAL(os.path.join(out_dir,subdir))"
    ]
   },
   {
@@ -814,6 +819,11 @@
     "// Standard NRPy+ memory access:\n",
     "#define IDX4S(g,i,j,k) \\\n",
     "( (i) + Nxx_plus_2NGHOSTS0 * ( (j) + Nxx_plus_2NGHOSTS1 * ( (k) + Nxx_plus_2NGHOSTS2 * (g) ) ) )\n",
+    "\n",
+    "const int kronecker_delta[4][3] = { { 0,0,0 },\n",
+    "                                    { 1,0,0 },\n",
+    "                                    { 0,1,0 },\n",
+    "                                    { 0,0,1 } };\n",
     "\n",
     "// Give gridfunctions their names:\n",
     "#define GAMMADD00GF 0\n",
@@ -861,12 +871,12 @@
     "#include \"calculate_BU_AD_psi6Phi.h\"\n",
     "#include \"calculate_ValenciavU.h\"\n",
     "#include \"calculate_analytic_RHSs.h\"\n",
-    "#include \"interpolate_metric_gfs_to_cell_faces.h\"\n",
-    "#include \"calculate_StildeD0_source_term.h\"\n",
-    "#include \"calculate_StildeD1_source_term.h\"\n",
-    "#include \"calculate_StildeD2_source_term.h\"\n",
-    "#include \"calculate_parentheticals_for_RHSs.h\"\n",
-    "#include \"calculate_AD_gauge_psi6Phi_RHSs.h\"\n",
+    "#include \"source_terms/interpolate_metric_gfs_to_cell_faces.h\"\n",
+    "#include \"source_terms/calculate_StildeD0_source_term.h\"\n",
+    "#include \"source_terms/calculate_StildeD1_source_term.h\"\n",
+    "#include \"source_terms/calculate_StildeD2_source_term.h\"\n",
+    "#include \"source_terms/calculate_parentheticals_for_RHSs.h\"\n",
+    "#include \"source_terms/calculate_AD_gauge_psi6Phi_RHSs.h\"\n",
     "\n",
     "int main(int argc, const char *argv[]) {\n",
     "    paramstruct params;\n",
@@ -921,13 +931,13 @@
     "    calculate_analytic_RHSs(&params,xx,rhs_exact_gfs);\n",
     "    // Now, run our function:\n",
     "    int flux_dirn = 0;\n",
-    "    interpolate_metric_gfs_to_cell_faces(&params,auxevol_gfs,flux_dirn);\n",
+    "    interpolate_metric_gfs_to_cell_faces(&params,auxevol_gfs,flux_dirn+1);\n",
     "    calculate_StildeD0_source_term(&params,xx,auxevol_gfs,rhs_gfs);\n",
     "    flux_dirn = 1;\n",
-    "    interpolate_metric_gfs_to_cell_faces(&params,auxevol_gfs,flux_dirn);\n",
+    "    interpolate_metric_gfs_to_cell_faces(&params,auxevol_gfs,flux_dirn+1);\n",
     "    calculate_StildeD1_source_term(&params,xx,auxevol_gfs,rhs_gfs);\n",
     "    flux_dirn = 2;\n",
-    "    interpolate_metric_gfs_to_cell_faces(&params,auxevol_gfs,flux_dirn);\n",
+    "    interpolate_metric_gfs_to_cell_faces(&params,auxevol_gfs,flux_dirn+1);\n",
     "    calculate_StildeD2_source_term(&params,xx,auxevol_gfs,rhs_gfs);\n",
     "    calculate_parentheticals_for_RHSs(&params,xx,evol_gfs,auxevol_gfs);\n",
     "    calculate_AD_gauge_psi6Phi_RHSs(&params,xx,evol_gfs,auxevol_gfs,rhs_gfs);\n",
@@ -984,9 +994,9 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_source_A_gauge_Phi_rhs_unit_test.c -o Validation/Stilde_source_A_gauge_Phi_rhs_unit_test -lm`...\n",
-      "Finished executing in 1.2229399681091309 seconds.\n",
+      "Finished executing in 1.215669870376587 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 1.246082067489624 seconds.\n",
+      "Finished in 1.2271912097930908 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
@@ -1011,7 +1021,7 @@
       "xx[0][7] = 2.000000000000000e-01\n",
       "xx[0][8] = 3.000000000000000e-01\n",
       "xx[0][9] = 4.000000000000000e-01\n",
-      "Finished in 0.2480483055114746 seconds.\n",
+      "Finished in 0.2468411922454834 seconds.\n",
       "\n",
       "\n"
      ]
@@ -1057,13 +1067,13 @@
      "output_type": "stream",
      "text": [
       "The following quantities converge at the listed order (should be ~2):\n",
-      "Stilde_rhsD0: 2.0331691730608146\n",
-      "Stilde_rhsD1: 2.1934376229661963\n",
-      "Stilde_rhsD2: 2.14126255215318\n",
+      "Stilde_rhsD0: 2.0331691730607853\n",
+      "Stilde_rhsD1: 2.19343762296608\n",
+      "Stilde_rhsD2: 2.1412625521533175\n",
       "A_rhsD0:      1.9883658746309683\n",
-      "A_rhsD1:      1.9937273134926816\n",
-      "A_rhsD2:      2.0022838026313523\n",
-      "psi6Phi:      1.9752724953842513\n"
+      "A_rhsD1:      1.993727313495029\n",
+      "A_rhsD2:      2.002283802631376\n",
+      "psi6Phi:      1.9752724953844056\n"
      ]
     }
    ],
