--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb
@@ -598,9 +598,9 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_flux_unit_test.C -o Validation/Stilde_flux_unit_test -lm`...\n",
-      "Finished executing in 0.6140339374542236 seconds.\n",
+      "Finished executing in 0.614177942276001 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 0.6243669986724854 seconds.\n",
+      "Finished in 0.6240043640136719 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
@@ -614,14 +614,14 @@
       "of outputs should show at least 10 significant digits of agreement. \n",
       "\n",
       "SDA: 16.4, 16.4, 16.4\n",
-      "SDA: 16.9, 16.6, inf\n",
-      "SDA: 16.4, 16.4, 17.0\n",
+      "SDA: inf, 16.9, 16.9\n",
+      "SDA: inf, 16.4, 16.7\n",
       "Note that in the case of very high velocities, numerical error will accumulate \n",
       "and reduce agreement significantly due to a catastrophic cancellation. \n",
       "\n",
       "ETK   Results: 6.5896896757000403e-02, -2.7215509172873419e-02, 5.8016430702657405e-02\n",
       "\n",
-      "Finished in 0.1287999153137207 seconds.\n",
+      "Finished in 0.1288590431213379 seconds.\n",
       "\n",
       "\n"
      ]
