--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb
@@ -33,14 +33,14 @@
     "A_y &= \\left \\{ \\begin{array}{lll}\\gamma_\\mu x - 0.015 & \\mbox{if} & x \\leq -0.1/\\gamma_\\mu \\\\\n",
     "1.15 \\gamma_\\mu x - 0.03g(x) & \\mbox{if} & -0.1/\\gamma_\\mu \\leq x \\leq 0.1/\\gamma_\\mu \\\\ \n",
     "1.3 \\gamma_\\mu x - 0.015 & \\mbox{if} & x \\geq 0.1/\\gamma_\\mu \\end{array} \\right. , \\\\\n",
-    " A_z = &\\ y - \\gamma_\\mu (1-\\mu)x ,\n",
+    "A_z &= \\ y - \\gamma_\\mu (1-\\mu)x ,\n",
     "\\end{align}\n",
     "which generates the magnetic field in the wave frame,\n",
     "\\begin{align}\n",
     "B'^{x'}(x') = &\\ 1.0,\\ B'^y(x') = 1.0, \\\\\n",
-    "B'^z(x') = &\\ \\left \\{ \\begin{array}{lll} 1.0 & \\mbox{if} & x' \\leq -0.1 \\\\\n",
-    "\t\t\t\t1.0+0.15 f(x') & \\mbox{if} & -0.1 \\leq x' \\leq 0.1 \\\\\n",
-    "\t\t\t\t1.3 & \\mbox{if} & x' \\geq 0.1 \\end{array} \\right. .\n",
+    "B'^z(x') = &\\ \\left \\{ \\begin{array}{lll} 1.0 & \\mbox{if} & x' \\leq -0.1/\\gamma_\\mu \\\\\n",
+    "\t\t\t\t1.0+0.15 f(x') & \\mbox{if} & -0.1/\\gamma_\\mu \\leq x' \\leq 0.1/\\gamma_\\mu \\\\\n",
+    "\t\t\t\t1.3 & \\mbox{if} & x' \\geq 0.1/\\gamma_\\mu \\end{array} \\right. .\n",
     "\\end{align}\n",
     "The electric field in the wave frame is then given by\n",
     "$$E'^{x'}(x') = -B'^z(0,x') \\ \\ , \\ \\ E'^y(x') = 0.0 \\ \\ , \\ \\ E'^z(x') = 1.0  .$$\n",
@@ -61,7 +61,7 @@
     "\n",
     "For the eventual purpose of testing convergence, any quantity $Q$ evolves as $Q(t,x) = Q(0,x-\\mu t)$\n",
     "\n",
-    "See the [Tutorial-GiRaFFEfood_NRPy](Tutorial-GiRaFFEfood_NRPy.ipynb) tutorial notebook for more general detail on how this is used.\n"
+    "See the [Tutorial-GiRaFFEfood_NRPy_Exact_Wald](Tutorial-GiRaFFEfood_NRPy.ipynb) tutorial notebook for more general detail on how this is used.\n"
    ]
   },
   {
@@ -226,8 +226,7 @@
    ],
    "source": [
     "xprime = gammamu*x\n",
-    "f_AW = 1 + sp.sin(5*M_PI*xprime)\n",
-    "print(f_AW)"
+    "f_AW = 1 + sp.sin(5*M_PI*xprime)"
    ]
   },
   {
@@ -266,8 +265,7 @@
     "BpU[1] = sp.sympify(1)\n",
     "BpU[2] = noif.coord_leq_bound(x,-bound)*Bzleft\\\n",
     "        +noif.coord_greater_bound(x,-bound)*noif.coord_leq_bound(x,bound)*Bzcenter\\\n",
-    "        +noif.coord_greater_bound(x,bound)*Bzright\n",
-    "print(BpU[2])"
+    "        +noif.coord_greater_bound(x,bound)*Bzright"
    ]
   },
   {
@@ -315,7 +313,7 @@
     "BU = ixp.zerorank1()\n",
     "BU[0] = BpU[0]\n",
     "BU[1] = gammamu*(BpU[1]-mu_AW*EpU[2])\n",
-    "BU[2] = gammamu*(BpU[2]+mu_AW*EpU[1])\n"
+    "BU[2] = gammamu*(BpU[2]+mu_AW*EpU[1])"
    ]
   },
   {
@@ -339,7 +337,7 @@
     "EU = ixp.zerorank1()\n",
     "EU[0] = EpU[0]\n",
     "EU[1] = gammamu*(EpU[1]+mu_AW*BpU[2])\n",
-    "EU[2] = gammamu*(EpU[2]-mu_AW*BpU[1])\n"
+    "EU[2] = gammamu*(EpU[2]-mu_AW*BpU[1])"
    ]
   },
   {
@@ -372,8 +370,7 @@
     "for i in range(3):\n",
     "    for j in range(3):\n",
     "        for k in range(3):\n",
-    "            ValenciavU[i] += LeviCivitaSymbolDDD[i][j][k] * EU[j] * BU[k] / B2\n",
-    "            "
+    "            ValenciavU[i] += LeviCivitaSymbolDDD[i][j][k] * EU[j] * BU[k] / B2   "
    ]
   },
   {
