--- a/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
@@ -200,8 +200,8 @@
     "&= 1/\\alpha^2 \\\\\n",
     "b &= 2 \\left(\\beta^i v_0^2 / \\alpha^2 - (u^0)^2 v^i (1-v_0^2)\\right) \\\\\n",
     "&= 2 \\beta^i / \\alpha^2 \\\\\n",
-    "c &= (u^0)^2 (v^i)^2 (1-v_0^2) - v_0^2 \\left(g^{ii} - (\\beta^i)^2/\\alpha^2\\right) \\\\\n",
-    "&= g^{ii} - (\\beta^i)^2/\\alpha^2,\n",
+    "c &= (u^0)^2 (v^i)^2 (1-v_0^2) - v_0^2 \\left(\\gamma^{ii} - (\\beta^i)^2/\\alpha^2\\right) \\\\\n",
+    "&= \\gamma^{ii} - (\\beta^i)^2/\\alpha^2,\n",
     "\\end{align}\n",
     "are simplifications that should save us some time; we can see that $a \\geq 0$ is guaranteed. Note that we also force `detm` to be positive. Thus, `detm/a` is guaranteed to be positive itself, rendering the calls to `nrpyAbs()` superfluous. Furthermore, we eliminate any dependence on the Valencia 3-velocity and the time compoenent of the four-velocity, $u^0$. This leaves us free to solve the quadratic in the familiar way: $$c_\\pm = \\frac{-b \\pm \\sqrt{b^2-4ac}}{2a}$$."
    ]
@@ -215,7 +215,7 @@
    "outputs": [],
    "source": [
     "# We'll write this as a function so that we can calculate the expressions on-demand for any choice of i\n",
-    "def find_cp_cm(lapse,shifti,gupii):\n",
+    "def find_cp_cm(lapse,shifti,gammaUUii):\n",
     "    # Inputs:  u0,vi,lapse,shift,gammadet,gupii\n",
     "    # Outputs: cplus,cminus \n",
     "    \n",
@@ -224,7 +224,7 @@
     "    # b = 2 beta^i / alpha^2\n",
     "    b = sp.sympify(2) * shifti /(lapse*lapse)\n",
     "    # c = -g^{ii} + (beta^i)^2 / alpha^2\n",
-    "    c = - gupii + shifti*shifti/(lapse*lapse)\n",
+    "    c = - gammaUUii + shifti*shifti/(lapse*lapse)\n",
     "    \n",
     "    # Now, we are free to solve the quadratic equation as usual. We take care to avoid passing a\n",
     "    # negative value to the sqrt function.\n",
@@ -502,12 +502,20 @@
     "\n",
     "This computes phase speeds in the direction given by flux_dirn. Note that we replace the full dispersion relation with a simpler one, which overestimates the maximum speeds by a factor of ~2. See full discussion around Eqs. 49 and 50 in [Duez, et al.](http://arxiv.org/pdf/astro-ph/0503420.pdf). In summary, we solve the dispersion relation (in, e.g., the $x$-direction) with a wave vector of $k_\\mu = (-\\omega,k_x,0,0)$. So, we solve the approximate dispersion relation $\\omega_{\\rm cm}^2 = [v_A^2 + c_s^2 (1-v_A^2)]k_{\\rm cm}^2$ for the wave speed $\\omega/k_x$, where the sound speed $c_s = \\sqrt{\\Gamma P/(h \\rho_0)}$, the Alfv&eacute;n speed $v_A = 1$ (in GRFFE), $\\omega_{\\rm cm} = -k_\\mu k^\\mu$ is the frequency in the comoving frame, $k_{\\rm cm}^2 = K_\\mu K^\\mu$ is the wavenumber squared in the comoving frame, and $K_\\mu = (g_{\\mu\\nu} + u_\\mu u_\\nu)k^\\nu$ is the part of the wave vector normal to the four-velocity $u^\\mu$. See below for a complete derivation.\n",
     "\n",
-    "What follows is a complete derivation of the quadratic we solve.\n",
+    "What follows is a complete derivation of the quadratic we solve. We start from the following relations:\n",
     "\\begin{align}\n",
     "w_{\\rm cm} &= (-k_0 u^0 - k_x u^x) \\\\\n",
     "k_{\\rm cm}^2 &= K_{\\mu} K^{\\mu}, \\\\\n",
     "K_{\\mu} K^{\\mu} &= (g_{\\mu a} + u_{\\mu} u_a) k^a  g^{\\mu b} [ (g_{c b} + u_c u_b) k^c ] \\\\\n",
-    "\\rightarrow g^{\\mu b} (g_{c b} + u_{c} u_{b}) k^c &= (\\delta^{\\mu}_c + u_c u^{\\mu} ) k^c \\\\\n",
+    "\\end{align}\n",
+    "The last term of the above can be written as follow:\n",
+    "$$\n",
+    "(g_{c b} + u_{c} u_{b}) k^c = (\\delta^{\\mu}_c + u_c u^{\\mu} ) k^c\n",
+    "$$\n",
+    "\n",
+    "Then,\n",
+    "\\begin{align}\n",
+    "K_{\\mu} K^{\\mu} &= (g_{\\mu a} + u_{\\mu} u_a) k^a  g^{\\mu b} [ (g_{c b} + u_c u_b) k^c ] \\\\\n",
     "                 &= (g_{\\mu a} + u_{\\mu} u_a) k^a  (\\delta^{\\mu}_c + u_c u^{\\mu} ) k^c \\\\\n",
     "                 &=[(g_{\\mu a} + u_{\\mu} u_a) \\delta^{\\mu}_c + (g_{\\mu a} + u_{\\mu} u_a) u_c u^{\\mu} ] k^c k^a \\\\\n",
     "                 &=[(g_{c a} + u_c u_a) + (u_c u_a -  u_a u_c] k^c k^a \\\\\n",
@@ -517,18 +525,17 @@
     "k_a k^a &= k_0 g^{0 0} k_0 + k_x k_0 g^{0 x} + g^{x 0} k_0 k_x + g^{x x} k_x k_x \\\\\n",
     "         &= g^{00} (k_0)^2 + 2 g^{x0} k_0 k_x + g^{xx} (k_x)^2 \\\\\n",
     "u^c u^a k_c k_a &= (u^0 k_0 + u^x k_x) (u^0 k_0 + u^x k_x) = (u^0 k_0)^2 + 2 u^x k_x u^0 k_0 + (u^x k_x)^2 \\\\\n",
-    "(k_0 u0)^2  + 2 k_x u^x k_0 u^0 + (k_x u^x)^2 &= v_0^2 [ (u^0 k_0)^2 + 2 u^x k_x u^0 k_0 + (u^x k_x)^2 + g^{00} (k_0)^2 + 2 g^{x0} k_0 k_x + g^{xx} (k_x)^2] \\\\\n",
+    "(k_0 u^0)^2  + 2 k_x u^x k_0 u^0 + (k_x u^x)^2 &= v_0^2 [ (u^0 k_0)^2 + 2 u^x k_x u^0 k_0 + (u^x k_x)^2 + g^{00} (k_0)^2 + 2 g^{x0} k_0 k_x + g^{xx} (k_x)^2] \\\\\n",
     "(1-v_0^2) (u^0 k_0 + u^x k_x)^2 &= v_0^2 (g^{00} (k_0)^2 + 2 g^{x0} k_0 k_x + g^{xx} (k_x)^2) \\\\\n",
     "(1-v_0^2) (u^0 k_0/k_x + u^x)^2 &= v_0^2 (g^{00} (k_0/k_x)^2 + 2 g^{x0} k_0/k_x + g^{xx}) \\\\\n",
     "(1-v_0^2) (u^0 X + u^x)^2 &= v_0^2 (g^{00} X^2 + 2 g^{x0} X + g^{xx}) \\\\\n",
     "(1-v_0^2) ((u^0)^2 X^2 + 2 u^x (u^0) X + (u^x)^2) &= v_0^2 (g^{00} X^2 + 2 g^{x0} X + g^{xx}) \\\\\n",
-    "&X^2 ( (1-v_0^2) (u^0)^2 - v_0^2 g^{00}) + X (2 u^x u^0 (1-v_0^2) - 2 v_0^2 g^{x0}) + (1-v_0^2) (u^x)^2 - v_0^2 g^{xx} \\\\\n",
+    "0 &= X^2 ( (1-v_0^2) (u^0)^2 - v_0^2 g^{00}) + X (2 u^x u^0 (1-v_0^2) - 2 v_0^2 g^{x0}) + (1-v_0^2) (u^x)^2 - v_0^2 g^{xx} \\\\\n",
     "a &= (1-v_0^2) (u^0)^2 - v_0^2 g^{00} = (1-v_0^2) (u^0)^2 + v_0^2/\\alpha^2 \\leftarrow {\\rm VERIFIED} \\\\\n",
     "b &= 2 u^x u^0 (1-v_0^2) - 2 v_0^2 \\beta^x/\\alpha^2 \\leftarrow {\\rm VERIFIED,\\ } X\\rightarrow -X, {\\rm because\\ } X = -w/k_1, {\\rm \\ and\\ we\\ are\\ solving\\ for} -X. \\\\\n",
-    "c &= (1-v_0^2) (u^x)^2 - v_0^2 (g^{xx}\\psi^{-4} - (\\beta^x/\\alpha)^2) \\leftarrow {\\rm VERIFIED} \\\\\n",
+    "c &= (1-v_0^2) (u^x)^2 - v_0^2 (\\gamma^{xx}\\psi^{-4} - (\\beta^x/\\alpha)^2) \\leftarrow {\\rm VERIFIED} \\\\\n",
     "v_0^2 &= v_A^2 + c_s^2 (1 - v_A^2) \\\\\n",
-    "\\end{align}\n",
-    "\n"
+    "\\end{align}"
    ]
   },
   {
