--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
@@ -809,11 +809,12 @@
     "\n",
     "void GiRaFFE_NRPy_RHSs(const paramstruct *restrict params,REAL *restrict auxevol_gfs,const REAL *restrict in_gfs,REAL *restrict rhs_gfs) {\n",
     "#include \"set_Cparameters.h\"\n",
-    "    // First things first: initialize the RHSs to zero!\n",
+    "    // First thing's first: initialize the RHSs to zero!\n",
+    "    #pragma omp parallel for
     "    for(int ii=0;ii<Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2*NUM_EVOL_GFS;ii++) {\n",
     "        rhs_gfs[ii] = 0.0;\n",
     "    }\n",
-    "    // First things first: we calculate the easier source terms that don't require flux directions\n",
+    "    // Next calculate the easier source terms that don't require flux directions\n",
     "    // This will also reset the RHSs for each gf at each new timestep.\n",
     "    calculate_parentheticals_for_RHSs(params,in_gfs,auxevol_gfs);\n",
     "    calculate_AD_gauge_psi6Phi_RHSs(params,in_gfs,auxevol_gfs,rhs_gfs);\n",
