Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb: restore default thorn name to interp_arbgrid_MO_ETK

--- a/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
@@ -96,7 +96,7 @@
     "import shutil, os, sys, time     # Standard Python modules for multiplatform OS-level functions, benchmarking\n",
     "\n",
     "# Create C code output directory:\n",
-    "Ccodesdir = \"interp_arbgrid_MO_ETK-validation\"\n",
+    "Ccodesdir = \"interp_arbgrid_MO_ETK\"\n",
     "# First remove C code output directory and all subdirectories if they exist\n",
     "# Courtesy https://stackoverflow.com/questions/303200/how-do-i-remove-delete-a-folder-that-is-not-empty\n",
     "shutil.rmtree(Ccodesdir, ignore_errors=True)\n",
@@ -136,7 +136,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing interp_arbgrid_MO_ETK-validation/src/Interpolate_to_dest_grid.h\n"
+      "Writing interp_arbgrid_MO_ETK/src/Interpolate_to_dest_grid.h\n"
      ]
     }
    ],
@@ -253,7 +253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing interp_arbgrid_MO_ETK-validation/src/interpolate_set_of_points_in_file.h\n"
+      "Writing interp_arbgrid_MO_ETK/src/interpolate_set_of_points_in_file.h\n"
      ]
     }
    ],
@@ -415,7 +415,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing interp_arbgrid_MO_ETK-validation/src/output_to_file.h\n"
+      "Writing interp_arbgrid_MO_ETK/src/output_to_file.h\n"
      ]
     }
    ],
@@ -485,7 +485,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing interp_arbgrid_MO_ETK-validation/src/main_function.cc\n"
+      "Writing interp_arbgrid_MO_ETK/src/main_function.cc\n"
      ]
     }
    ],
@@ -588,7 +588,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing interp_arbgrid_MO_ETK-validation/src/standalone/standalone_C_code_genpoints.c\n"
+      "Writing interp_arbgrid_MO_ETK/src/standalone/standalone_C_code_genpoints.c\n"
      ]
     }
    ],
@@ -915,7 +915,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing interp_arbgrid_MO_ETK-validation/src/unstagger_A_fields.cc\n"
+      "Writing interp_arbgrid_MO_ETK/src/unstagger_A_fields.cc\n"
      ]
     }
    ],
@@ -1501,7 +1501,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing interp_arbgrid_MO_ETK-validation/src/construct_function_to_interpolate__store_to_interped_gf.cc\n"
+      "Writing interp_arbgrid_MO_ETK/src/construct_function_to_interpolate__store_to_interped_gf.cc\n"
      ]
     }
    ],
@@ -1628,7 +1628,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing interp_arbgrid_MO_ETK-validation/src/interp_counter.cc\n"
+      "Writing interp_arbgrid_MO_ETK/src/interp_counter.cc\n"
      ]
     }
    ],
@@ -1954,7 +1954,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing interp_arbgrid_MO_ETK-validation/src/make.code.defn\n"
+      "Writing interp_arbgrid_MO_ETK/src/make.code.defn\n"
      ]
     }
    ],
@@ -1988,7 +1988,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing interp_arbgrid_MO_ETK-validation/interface.ccl\n"
+      "Writing interp_arbgrid_MO_ETK/interface.ccl\n"
      ]
     }
    ],
@@ -2050,7 +2050,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing interp_arbgrid_MO_ETK-validation/param.ccl\n"
+      "Writing interp_arbgrid_MO_ETK/param.ccl\n"
      ]
     }
    ],
@@ -2151,7 +2151,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing interp_arbgrid_MO_ETK-validation/schedule.ccl\n"
+      "Writing interp_arbgrid_MO_ETK/schedule.ccl\n"
      ]
     }
    ],
