--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -95,8 +95,7 @@
     "shutil.rmtree(Ccodesdir, ignore_errors=True)\n",
     "# Then create a fresh directory\n",
     "cmd.mkdir(Ccodesdir)\n",
-    "cmd.mkdir(os.path.join(Ccodesdir,\"src/\"))\n",
-    "cmd.mkdir(os.path.join(Ccodesdir,\"src\",\"standalone/\"))"
+    "cmd.mkdir(os.path.join(Ccodesdir,\"src/\"))"
    ]
   },
   {
@@ -126,7 +125,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing interp_sph_grids_ETK/src/Interpolate_to_sph_grid.h\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $Ccodesdir/src/Interpolate_to_sph_grid.h\n",
     "\n",
@@ -276,7 +283,15 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing interp_sph_grids_ETK/src/Set_up_interp_points_on_sph_grid.h\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $Ccodesdir/src/Set_up_interp_points_on_sph_grid.h\n",
     "\n",
@@ -331,7 +346,15 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing interp_sph_grids_ETK/src/output_to_file.h\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $Ccodesdir/src/output_to_file.h\n",
     "\n",
@@ -404,7 +427,15 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing interp_sph_grids_ETK/src/main_function.cc\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $Ccodesdir/src/main_function.cc\n",
     "\n",
