Update v3 Hamiltonian notebook validation notes.

--- a/Tutorial-SEOBNR_Documentation.ipynb
+++ b/Tutorial-SEOBNR_Documentation.ipynb
@@ -21,9 +21,9 @@
     "## This module documents the reduced spinning effective one-body Hamiltonian as numerically implemented in LALSuite's SEOBNRv3 gravitational waveform approximant.\n",
     "\n",
     "\n",
-    "**Notebook Status:** <font color='red'><b> In progress </b></font>\n",
+    "**Notebook Status:** <font color='green'><b> Validated </b></font>\n",
     "\n",
-    "**Validation Notes:** This module is under active development -- do ***not*** use the resulting code for scientific applications.  In the future, this module will be validated against the LALSuite [SEOBNRv3/SEOBNRv3_opt code]( https://git.ligo.org/lscsoft/lalsuite.) that was reviewed and approved for LIGO parameter estimation by the LIGO Scientific Collaboration.\n",
+    "**Validation Notes:** This module has been validated against the LALSuite [SEOBNRv3/SEOBNRv3_opt code]( https://git.ligo.org/lscsoft/lalsuite.) that was reviewed and approved for LIGO parameter estimation by the LIGO Scientific Collaboration.  That is, the value $H_{\\rm real}$ output from this notebook agrees to roundoff error with the value of $H_{\\rm real}$ computed by the LALSuite function XLALSimIMRSpinPrecEOBHamiltonian().\n",
     "\n",
     "\n",
     "## Introduction\n",
@@ -38,7 +38,7 @@
     "1. $c = 1$ where $c$ is the speed of light in a vacuum,\n",
     "1. spacial tensor indicies are denoted by lowercase Latin letters,\n",
     "1. repeated indices indicate Einstein summation notation, and\n",
-    "1. we normalize $M=1$ in the code cells for agreement with LALSuite.  Nonetheless, $M$ appears in the text cells for comparison with the cited literature.\n",
+    "1. we normalize $M=1$ in all terms except for $\\eta$ and $\\mu$ for agreement with LALSuite.  Nonetheless, $M$ appears in other text cells for comparison with the cited literature.\n",
     "\n",
     "### Citations\n",
     "Throughout this module, we will refer to\n",
