in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb: Fix the JSON

--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
@@ -810,7 +810,7 @@
     "void GiRaFFE_NRPy_RHSs(const paramstruct *restrict params,REAL *restrict auxevol_gfs,const REAL *restrict in_gfs,REAL *restrict rhs_gfs) {\n",
     "#include \"set_Cparameters.h\"\n",
     "    // First thing's first: initialize the RHSs to zero!\n",
-    "    #pragma omp parallel for
+    "    #pragma omp parallel for\n",
     "    for(int ii=0;ii<Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2*NUM_EVOL_GFS;ii++) {\n",
     "        rhs_gfs[ii] = 0.0;\n",
     "    }\n",
