--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -139,11 +139,15 @@
     "#           I.e., generate BSSN and Ricci C code kernels using SIMD-vectorized \n",
     "#           compiler intrinsics, which *greatly improve the code's performance*,\n",
     "#           though at the expense of making the C-code kernels less \n",
-    "#           human-readable. Note that SIMD-based transcendental function \n",
-    "#           intrinsics are not supported by the default installation of gcc or \n",
-    "#           clang (you will want to use e.g., the SLEEF library from sleef.org,\n",
-    "#           for this purpose). The Intel compiler suite does support these \n",
-    "#           intrinsics however without the need for external libraries.\n",
+    "#           human-readable. \n",
+    "#           * Important note in case you wish to modify the BSSN/Ricci kernels \n",
+    "#             here by adding expressions containing transcendental functions\n",
+    "#             (e.g., certain scalar fields):\n",
+    "#           Note that SIMD-based transcendental function intrinsics are not \n",
+    "#           supported by the default installation of gcc or clang (you will\n",
+    "#           need to use e.g., the SLEEF library from sleef.org, for this \n",
+    "#           purpose). The Intel compiler suite does support these intrinsics \n",
+    "#           however without the need for external libraries.\n",
     "SIMD_enable = True\n",
     "\n",
     "# Step 2: Set some core parameters, including CoordSystem MoL timestepping algorithm,\n",
