--- a/in_progress/Tutorial-GiRaFFE_NRPy-BCs.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-BCs.ipynb
@@ -192,27 +192,22 @@
     "// evaluate true if the velocity is directed inwards on the face in consideration.\n",
     "#define  FACE_UPDATE_OUTFLOW(which_gf, i0min,i0max, i1min,i1max, i2min,i2max, FACEX0,FACEX1,FACEX2) \\\n",
     "  for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++) { \\\n",
-    "      aux_gfs[IDX4S(which_gf,i0,i1,i2)] =                                    \\\n",
-    "          +2.0*aux_gfs[IDX4S(which_gf,i0+1*FACEX0,i1+1*FACEX1,i2+1*FACEX2)]  \\\n",
-    "          -1.0*aux_gfs[IDX4S(which_gf,i0+2*FACEX0,i1+2*FACEX1,i2+2*FACEX2)]; \\\n",
-    "  }\n",
-    "/*      aux_gfs[IDX4S(which_gf_0+1,i0,i1,i2)] =                                    \\\n",
-    "          +3.0*aux_gfs[IDX4S(which_gf_0+1,i0+1*FACEX0,i1+1*FACEX1,i2+1*FACEX2)]  \\\n",
-    "          -3.0*aux_gfs[IDX4S(which_gf_0+1,i0+2*FACEX0,i1+2*FACEX1,i2+2*FACEX2)]  \\\n",
-    "          +1.0*aux_gfs[IDX4S(which_gf_0+1,i0+3*FACEX0,i1+3*FACEX1,i2+3*FACEX2)]; \\\n",
+    "      aux_gfs[IDX4S(which_gf_0,i0,i1,i2)] =                                      \\\n",
+    "          aux_gfs[IDX4S(which_gf_0,i0+FACEX0,i1+FACEX1,i2+FACEX2)];              \\\n",
+    "      aux_gfs[IDX4S(which_gf_0+1,i0,i1,i2)] =                                    \\\n",
+    "          aux_gfs[IDX4S(which_gf_0+1,i0+FACEX0,i1+FACEX1,i2+FACEX2)];            \\\n",
     "      aux_gfs[IDX4S(which_gf_0+2,i0,i1,i2)] =                                    \\\n",
-    "          +3.0*aux_gfs[IDX4S(which_gf_0+2,i0+1*FACEX0,i1+1*FACEX1,i2+1*FACEX2)]  \\\n",
-    "          -3.0*aux_gfs[IDX4S(which_gf_0+2,i0+2*FACEX0,i1+2*FACEX1,i2+2*FACEX2)]  \\\n",
-    "          +1.0*aux_gfs[IDX4S(which_gf_0+2,i0+3*FACEX0,i1+3*FACEX1,i2+3*FACEX2)]; \\\n",
-    "      if(FACEX0*aux_gfs[IDX4S(which_gf_0+0,i0,i1,i2)] > 0.0) {                   \\\n",
+    "          aux_gfs[IDX4S(which_gf_0+2,i0+FACEX0,i1+FACEX1,i2+FACEX2)];            \\\n",
+    "  }\n",
+    "/*      if(FACEX0*aux_gfs[IDX4S(which_gf_0+0,i0,i1,i2)] > 0.0) {                   \\\n",
     "          aux_gfs[IDX4S(which_gf_0+0,i0,i1,i2)] = 0.0;                           \\\n",
-    "      }                                                                         \\\n",
+    "      }                                                                          \\\n",
     "      if(FACEX1*aux_gfs[IDX4S(which_gf_0+1,i0,i1,i2)] > 0.0) {                   \\\n",
     "          aux_gfs[IDX4S(which_gf_0+1,i0,i1,i2)] = 0.0;                           \\\n",
-    "      }                                                                         \\\n",
+    "      }                                                                          \\\n",
     "      if(FACEX2*aux_gfs[IDX4S(which_gf_0+2,i0,i1,i2)] > 0.0) {                   \\\n",
     "          aux_gfs[IDX4S(which_gf_0+2,i0,i1,i2)] = 0.0;                           \\\n",
-    "      }                                                                         \\\n",
+    "      }                                                                          \\\n",
     "*/\n",
     "\n"
    ]
@@ -337,23 +332,24 @@
     "%%writefile -a $outdir/GiRaFFE_boundary_conditions.h\n",
     "void apply_bcs_velocity(const paramstruct *restrict params,REAL *aux_gfs) {\n",
     "#include \"../set_Cparameters.h\"\n",
-    "    // Apply outflow/extrapolation boundary conditions to ValenciavU by passing VALENCIAVU0 as which_gf_0\n",
-    "    for(int which_gf=VALENCIAVU0GF;which_gf<=VALENCIAVU2GF;which_gf++) {\n",
+    "    // Apply outflow/copy boundary conditions to ValenciavU by passing VALENCIAVU0 as which_gf_0\n",
+    "//     for(int which_gf=VALENCIAVU0GF;which_gf<=VALENCIAVU2GF;which_gf++) {\n",
+    "    const int which_gf_0 = VALENCIAVU0GF;\n",
     "    int imin[3] = { NGHOSTS, NGHOSTS, NGHOSTS };\n",
     "    int imax[3] = { Nxx_plus_2NGHOSTS0-NGHOSTS, Nxx_plus_2NGHOSTS1-NGHOSTS, Nxx_plus_2NGHOSTS2-NGHOSTS };\n",
     "    for(int which_gz = 0; which_gz < NGHOSTS; which_gz++) {\n",
-    "      FACE_UPDATE_OUTFLOW(which_gf, imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2], MINFACE,NUL,NUL); imin[0]--;\n",
-    "      FACE_UPDATE_OUTFLOW(which_gf, imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2], MAXFACE,NUL,NUL); imax[0]++;\n",
+    "      FACE_UPDATE_OUTFLOW(which_gf_0, imin[0]-1,imin[0], imin[1],imax[1], imin[2],imax[2], MINFACE,NUL,NUL); imin[0]--;\n",
+    "      FACE_UPDATE_OUTFLOW(which_gf_0, imax[0],imax[0]+1, imin[1],imax[1], imin[2],imax[2], MAXFACE,NUL,NUL); imax[0]++;\n",
     "\n",
-    "      FACE_UPDATE_OUTFLOW(which_gf, imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2], NUL,MINFACE,NUL); imin[1]--;\n",
-    "      FACE_UPDATE_OUTFLOW(which_gf, imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2], NUL,MAXFACE,NUL); imax[1]++;\n",
+    "      FACE_UPDATE_OUTFLOW(which_gf_0, imin[0],imax[0], imin[1]-1,imin[1], imin[2],imax[2], NUL,MINFACE,NUL); imin[1]--;\n",
+    "      FACE_UPDATE_OUTFLOW(which_gf_0, imin[0],imax[0], imax[1],imax[1]+1, imin[2],imax[2], NUL,MAXFACE,NUL); imax[1]++;\n",
     "\n",
-    "      FACE_UPDATE_OUTFLOW(which_gf, imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2], NUL,NUL,MINFACE); \n",
+    "      FACE_UPDATE_OUTFLOW(which_gf_0, imin[0],imax[0], imin[1],imax[1], imin[2]-1,imin[2], NUL,NUL,MINFACE); \n",
     "        imin[2]--;\n",
-    "      FACE_UPDATE_OUTFLOW(which_gf, imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1, NUL,NUL,MAXFACE); \n",
+    "      FACE_UPDATE_OUTFLOW(which_gf_0, imin[0],imax[0], imin[1],imax[1], imax[2],imax[2]+1, NUL,NUL,MAXFACE); \n",
     "        imax[2]++;\n",
     "    }\n",
-    "    }\n",
+    "//     }\n",
     "}"
    ]
   },
@@ -646,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
