GiRaFFE-Afield_flux: Levi-Civita should not depend on Weyl. Also update Levi-Civita definition in Weyl so that no integer division is performed. The new Levi-Civita symbol function was manually validated to be correct.

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -322,7 +322,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 3.111828088760376 seconds.\n"
+      "Finished BSSN symbolic expressions in 3.0061588287353516 seconds.\n"
      ]
     }
    ],
@@ -545,17 +545,17 @@
       "Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.\n",
       "Generating C code for BSSN RHSs in Spherical coordinates.\n",
       "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
-      "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
       "Generating C code for Ricci tensor in Spherical coordinates.\n",
+      "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
       "Output C function enforce_detgammabar_constraint() to file BSSN_Two_BHs_Collide_Ccodes/enforce_detgammabar_constraint.h\n",
-      "Finished gamma constraint C codegen in 0.10913491249084473 seconds.\n",
+      "Finished gamma constraint C codegen in 0.12850451469421387 seconds.\n",
       "Output C function rhs_eval() to file BSSN_Two_BHs_Collide_Ccodes/rhs_eval.h\n",
-      "Finished BSSN_RHS C codegen in 7.033788204193115 seconds.\n",
-      "Finished BL initial data codegen in 7.628677606582642 seconds.\n",
+      "Finished BSSN_RHS C codegen in 5.893404960632324 seconds.\n",
       "Output C function Ricci_eval() to file BSSN_Two_BHs_Collide_Ccodes/Ricci_eval.h\n",
-      "Finished Ricci C codegen in 10.532261848449707 seconds.\n",
+      "Finished Ricci C codegen in 6.75607967376709 seconds.\n",
       "Output C function Hamiltonian_constraint() to file BSSN_Two_BHs_Collide_Ccodes/Hamiltonian_constraint.h\n",
-      "Finished Hamiltonian C codegen in 21.800782442092896 seconds.\n"
+      "Finished Hamiltonian C codegen in 6.877449035644531 seconds.\n",
+      "Finished BL initial data codegen in 7.500701904296875 seconds.\n"
      ]
     }
    ],
@@ -1102,14 +1102,14 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BSSN_Two_BHs_Collide_Ccodes/BrillLindquist_Playground.c -o BSSN_Two_BHs_Collide_Ccodes/output/BrillLindquist_Playground -lm`...\n",
-      "Finished executing in 4.617422342300415 seconds.\n",
+      "Finished executing in 4.818115711212158 seconds.\n",
       "Finished compilation.\n",
       "Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./BrillLindquist_Playground 72 12 2 1.0`...\n",
-      "\u001b[2KIt: 550 t=7.50 dt=1.36e-02 | 100.0%; ETA 0 s | t/h 27186.12 | gp/s 3.83e+06\n",
-      "Finished executing in 1.212087869644165 seconds.\n",
+      "\u001b[2KIt: 550 t=7.50 dt=1.36e-02 | 100.0%; ETA 0 s | t/h 25872.01 | gp/s 3.64e+06\r\n",
+      "Finished executing in 1.2113580703735352 seconds.\n",
       "Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./BrillLindquist_Playground 96 16 2 1.0`...\n",
-      "\u001b[2KIt: 970 t=7.44 dt=7.67e-03 | 99.2%; ETA 0 s | t/h 8941.78 | gp/s 3.98e+06\n",
-      "Finished executing in 3.2167115211486816 seconds.\n",
+      "\u001b[2KIt: 970 t=7.44 dt=7.67e-03 | 99.2%; ETA 0 s | t/h 8566.87 | gp/s 3.81e+06\r\n",
+      "Finished executing in 3.2136483192443848 seconds.\n",
       "Finished this code cell.\n"
      ]
     }
@@ -1533,15 +1533,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n"
      ]
     }
    ],
