--- a/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
+++ b/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
@@ -194,7 +194,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing FishboneMoncriefID/src/InitialData.c\n"
+      "Overwriting FishboneMoncriefID/src/InitialData.c\n"
      ]
     }
    ],
@@ -361,7 +361,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing FishboneMoncriefID/interface.ccl\n"
+      "Overwriting FishboneMoncriefID/interface.ccl\n"
      ]
     }
    ],
@@ -387,7 +387,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing FishboneMoncriefID/param.ccl\n"
+      "Overwriting FishboneMoncriefID/param.ccl\n"
      ]
     }
    ],
@@ -505,7 +505,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing FishboneMoncriefID/schedule.ccl\n"
+      "Overwriting FishboneMoncriefID/schedule.ccl\n"
      ]
     }
    ],
@@ -535,9 +535,7 @@
     "  WRITES: admbase::gyy(Everywhere)\n",
     "  WRITES: admbase::gyz(Everywhere)\n",
     "  WRITES: admbase::gzz(Everywhere)\n",
-    "  WRITES: hydrobase::velx(Everywhere)\n",
-    "  WRITES: hydrobase::vely(Everywhere)\n",
-    "  WRITES: hydrobase::velz(Everywhere)\n",
+    "  WRITES: hydrobase::vel(Everywhere) # Note that vel is a vector gridfunction.\n",
     "  WRITES: hydrobase::rho(Everywhere)\n",
     "  WRITES: hydrobase::eps(Everywhere)\n",
     "  WRITES: hydrobase::press(Everywhere)\n",
@@ -570,7 +568,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing FishboneMoncriefID/src/make.code.defn\n"
+      "Overwriting FishboneMoncriefID/src/make.code.defn\n"
      ]
     }
    ],
